# insert_overwrite__databricks_dbt

./: .gitignore  INSERT_OVERWRITE_EXAMPLES.md  README.md  databricks.yml  pyproject.toml
.github/workflows/: ci.yml
dbt_project/: .sqlfluff  dbt_project.yml  profiles.yml
dbt_project/models/: sources.yml
dbt_project/models/marts/liquid_clustered/: orders_mart_liquid.sql  orders_mart_liquid.yml
dbt_project/models/marts/partitioned/: orders_mart_partitioned.sql  orders_mart_partitioned.yml
dbt_project/models/staging/: stg_orders.sql  stg_orders.yml
notebooks/: 01_sql_replace_using_demo.ipynb  02a_setup_and_generate_data.ipynb  02b_simulate_late_arrivals.ipynb  02c_verify_sync.ipynb
resources/: dbt_workflow_job.yml  sql_replace_using_job.yml
